Rename the project name to 'nfc_tag_id_reader_cpp'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(nfc_tag_id_reader LANGUAGES CXX)
+project(nfc_tag_id_reader_cpp LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,8 +8,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Add source files
-add_executable(nfc_tag_id_reader src/main.cpp)
+add_executable(nfc_tag_id_reader_cpp src/main.cpp)
 
 # Install output
-install(TARGETS nfc_tag_id_reader
+install(TARGETS nfc_tag_id_reader_cpp
         RUNTIME DESTINATION bin)
